[package]
name = "kriyapass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "0.7.0"
serde = { version = "^1", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.91"
sqlx = { version = "*", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio  = "1.36.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "^0.15"
uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics",
    "serde" # Enable better diagnostics for compile-time UUIDs
] }
